--- a/angular.json
+++ b/angular.json
@@ -86,6 +86,12 @@
             "styles": ["src/styles.scss"],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {
+            "baseHref": "https://meyioo.github.io/angular-todo-app/"
+          }
         }
       }
     }
