--- a/package.json
+++ b/package.json
@@ -1,44 +1,49 @@
 {
-  "name": "angular-todo-app",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "deploy": "ng deploy --base-href=/angular-todo-app/  --repo='https://github.com/Meyioo/angular-todo-app.git'"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^18.2.0",
-    "@angular/common": "^18.2.0",
-    "@angular/compiler": "^18.2.0",
-    "@angular/core": "^18.2.0",
-    "@angular/forms": "^18.2.0",
-    "@angular/platform-browser": "^18.2.0",
-    "@angular/platform-browser-dynamic": "^18.2.0",
-    "@angular/router": "^18.2.0",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.14.10"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^18.2.10",
-    "@angular/cli": "^18.2.10",
-    "@angular/compiler-cli": "^18.2.0",
-    "@types/jasmine": "~5.1.0",
-    "angular-cli-ghpages": "^2.0.3",
-    "autoprefixer": "^10.4.20",
-    "jasmine-core": "~5.2.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "postcss": "^8.4.49",
-    "prettier": "3.3.3",
-    "tailwindcss": "^3.4.15",
-    "typescript": "~5.5.2"
-  }
+	"name": "angular-todo-app",
+	"version": "0.0.0",
+	"scripts": {
+		"ng": "ng",
+		"start": "ng serve",
+		"build": "ng build",
+		"watch": "ng build --watch --configuration development",
+		"test": "ng test",
+		"deploy": "ng deploy --base-href=/angular-todo-app/  --repo='https://github.com/Meyioo/angular-todo-app.git'",
+		"lint": "ng lint"
+	},
+	"private": true,
+	"dependencies": {
+		"@angular/animations": "^18.2.0",
+		"@angular/common": "^18.2.0",
+		"@angular/compiler": "^18.2.0",
+		"@angular/core": "^18.2.0",
+		"@angular/forms": "^18.2.0",
+		"@angular/platform-browser": "^18.2.0",
+		"@angular/platform-browser-dynamic": "^18.2.0",
+		"@angular/router": "^18.2.0",
+		"flowbite": "^2.5.2",
+		"flowbite-angular": "^1.0.0",
+		"tslib": "^2.3.0",
+		"zone.js": "~0.14.10"
+	},
+	"devDependencies": {
+		"@angular-devkit/build-angular": "^18.2.10",
+		"@angular/cli": "^18.2.10",
+		"@angular/compiler-cli": "^18.2.0",
+		"@types/jasmine": "~5.1.0",
+		"angular-cli-ghpages": "^2.0.3",
+		"angular-eslint": "19.0.1",
+		"autoprefixer": "^10.4.20",
+		"eslint": "^9.16.0",
+		"jasmine-core": "~5.2.0",
+		"karma": "~6.4.0",
+		"karma-chrome-launcher": "~3.2.0",
+		"karma-coverage": "~2.2.0",
+		"karma-jasmine": "~5.1.0",
+		"karma-jasmine-html-reporter": "~2.1.0",
+		"postcss": "^8.4.49",
+		"prettier": "^3.3.3",
+		"tailwindcss": "^3.4.15",
+		"typescript": "~5.5.2",
+		"typescript-eslint": "8.17.0"
+	}
 }
